--- a/FoodDraw/FoodDraw/Resources/Info.plist
+++ b/FoodDraw/FoodDraw/Resources/Info.plist
@@ -21,5 +21,7 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Used to show your location on the map and find your favourite restaurants around you.</string>
 </dict>
 </plist>
