--- a/FoodDraw/FoodDraw/Resources/Info.plist
+++ b/FoodDraw/FoodDraw/Resources/Info.plist
@@ -2,8 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>LSRequiresIPhoneOS</key>
-	<true/>
+	<key>CFBundleDisplayName</key>
+	<string>FoodDraw</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Used to show your location on the map and find your favourite restaurants around you.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -21,7 +23,5 @@
 			</array>
 		</dict>
 	</dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Used to show your location on the map and find your favourite restaurants around you.</string>
 </dict>
 </plist>
